Make sure that the view is visible when navigate is called
Fix #2980

Conflicts:
	styles/mobile/common/navbar.less

--- a/styles/common/transitions.less
+++ b/styles/common/transitions.less
@@ -19,6 +19,10 @@
     }
 }
 
+.k-fx-hidden {
+    visibility: hidden;
+}
+
 .k-fx-reverse {
     .k-fx-current {
         z-index: 1;
